# Todo-App

./: .gitignore  BACKEND_FIX.md  DEPLOYMENT.md  DOCKER_CHECKLIST.md  DOCKER_FIXED.md  DOCKER_READY.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  FRONTEND_FIX_REPORT.md  FRONTEND_FIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_WEB.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PRODUCTION_CHECKLIST.md  PROJECT_COMPLETION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_CONSOLE_OLD.md  REMAINING_TASKS.md  RUN_PROJECT.sh  SECURITY_REVIEW.md  WEB_IMPLEMENTATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  docker.sh  main.py  mock_api.py  pyproject.toml
.claude/agents/: todo-app-spec-reviewer.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: main.py
backend/src/api/: tasks.py
backend/src/auth/: dependencies.py
backend/src/db/: session.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/schemas/: task.py
backend/tests/: conftest.py
backend/tests/integration/: test_full_workflow.py  test_task_api.py
backend/tests/unit/: test_task_model.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
history/prompt/: constitution.md  plan.md  spec.md
src/: __init__.py
src/cli/: menu.py  (+2 more)
(+37 files in other folders)
